fixed colors and some spacing

--- a/app/public/styles/main.scss
+++ b/app/public/styles/main.scss
@@ -38,6 +38,7 @@ body {
     #splash-footer {
         float: right;
         padding-right: 5px;
+        color: #d9d9d9;
     }
     .inline {
         display: inline;
@@ -47,8 +48,21 @@ body {
     }
     .what-we-do {
         margin-top: 40px;
-        padding-left:2px;
+        padding-left: 2px;
+        color: #d9d9d9;
+        .blurb {
+          margin-top: 8px;
+        }
+        .icon {
+          width: 64px;
+          height: 64px;
+          padding: 0px;
+        }
+        .title {
+          margin-top: 20px;
+        }
     }
+    
     .header {
         padding: 20px 75px;
         background-color: #16a085;
